overflow bug solved

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,9 +9,6 @@
 }
 
 body{
-    display : flex;
-    align-items : center;
-    flex-direction: column;
     background-color: #f8d2d275;
 }
 
